# lego-market-analytics-public-

./: .gitignore  README.md  init_db.py  project_tree.py  pyproject.toml  requirements.txt  requirments.txt  setup.ps1  start-dev.ps1  verify_repo_integrity.py
core/: paths.py
dashboard/: app.py
dashboard/api/: main.py
dashboard/core/: paths.py
dashboard/templates/: index.html
dashboard/ui/: package-lock.json  package.json
data/examples/: 01_raw_active_listing.json  02_canonical_item.json  04_sold_feature_set.json  05_snapshot.json  06_opportunity.json  07_opportunity.json  08_opportunity.json
models/: active_item.py  joined_set_snapshot.py  opportunity.py  rebrickable_models.py  sold_item.py
pipeline/: paths.py  pipeline_demo_run.py
pipeline/canonicalization/: browse_adapter.py  canonicalize_sold_snapshot.py  completeness.py  condition.py  date_utils.py  dates.py  grouping.py  prices.py  seller.py  set_number_extractor.py  sold_adapter.py  sold_adapter_validator.py  sold_batch_validator.py  sold_validator.py
pipeline/config/: load_config.py  pipeline_config.json
pipeline/enrichment/: rebrickable_client.py  rebrickable_enricher.py  rebrickable_index.py  theme_helpers.py
pipeline/features/: attribute_extractor.py  feature_builder.py  sold_feature_builder.py
pipeline/ingestion/: browse_client_raw.py  ebay_auth.py  ebay_sold_client.py  finding_client_raw.py
pipeline/join/: active_sold_joiner.py
tests/: test_batch_validator.py  test_completeness.py  test_dates.py  test_prices.py  test_snapshot_builder.py  test_sold_adapter.py  test_sold_filters.py
(+21 files in other folders)
